# dacite-config

./: .gitignore  readme.md  setup.cfg
examples/: config.ini  config.json  config.prod.yml  config.toml  config.yml  env  example.py
src/dacite_config/: __init__.py  functions.py  readers.py  util.py
src/typed_config/: __init__.py  readers.py  util.py
