[metadata]
name = dacite-config
author = Julian de Ruiter
author-email = julianderuiter@gmail.com
home-page = https://github.com/jrderuiter/dacite-config
description = Helpers for creating typesafe configs using dacite.
license = unlicensed
# long-description = file: README.md
version = 0.0.1

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6.0
test_suite = tests
setup_requires =
    setuptools >= 38.3.0
install_requires =
    dacite
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
dev =
    pylint
    black
    wheel
    pep517
yaml =
    PyYAML
toml =
    toml

[bdist_wheel]
universal = 1
